@@ -1,2 +1,2 @@
-// 1.21	2024-07-04T12:36:20.8163335	Languages: en_us for mod: fossilslegacy
-c2661a94a90bd5cd615d17aae6205756774c64bc assets/fossilslegacy/lang/en_us.json
+// 1.21	2024-08-12T17:59:21.5185713	Languages: en_us for mod: fossilslegacy
+bd8e583a93fc33d07020260213d0909c7711da36 assets/fossilslegacy/lang/en_us.json
