@@ -1,2 +1,2 @@
-// 1.21	2024-06-17T13:55:41.2809729	Tags for fossilslegacy:stone_tablet_variants mod id fossilslegacy
-7745a7cba6b5c8b9539c43c8918e028a7e752112 data/fossilslegacy/tags/fossilslegacy/stone_tablet_variants/placeable.json
+// 1.21	2024-08-12T17:52:02.7681215	Tags for fossilslegacy:stone_tablet_variants mod id fossilslegacy
+2cb750193da9e0d5f90567c14725b4adf92d1b4c data/fossilslegacy/tags/fossilslegacy/stone_tablet_variants/placeable.json
