@@ -437,6 +437,8 @@
   "resourcePack.fossilslegacy.fa_legacy_textures.name": "F/A Original Textures",
   "stone_tablet.fossilslegacy.anu_death.author": "Kajun",
   "stone_tablet.fossilslegacy.anu_death.title": "Anu's Death",
+  "stone_tablet.fossilslegacy.anu_totem.author": "Willatendo",
+  "stone_tablet.fossilslegacy.anu_totem.title": "Anu Totem",
   "stone_tablet.fossilslegacy.future.author": "Kajun",
   "stone_tablet.fossilslegacy.future.title": "Future",
   "stone_tablet.fossilslegacy.great_war.author": "Kajun",
