@@ -19,6 +19,7 @@
     "fossilslegacy:holy_mosasaurus",
     "fossilslegacy:past",
     "fossilslegacy:time_machine",
-    "fossilslegacy:future"
+    "fossilslegacy:future",
+    "fossilslegacy:anu_totem"
   ]
 }
