@@ -1,4 +1,5 @@
 13/9/2024
+- (Fabric) Fixed Server Crash
 - Added Updated Triceratops Model
 12/9/2024
 - (Fabric) Fixed Crash
